--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
         okHttpLogging_version = "4.9.0"
         kotlinx_coroutines_version ="1.4.1"
         logger_version = "2.2.0"
+        paging_version = "3.0.0-alpha11"//TODO
     }
     repositories {
         google()
